--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
         <!-- Home Section -->
         <section id="home">
-            <img src="c:\Users\hp\Downloads\Borcelle (4).png" class="img_menu"/>
+            <img src="https://id.pinterest.com/pin/1009510072722598499" class="img_menu"/>
             <div class="kolom">
                 <p class="deskripsi">TRENDY THREADS</p>
                 <h2>Stay stylish effortlessly! Check out our  newest collection for your daily inspiration</h2>
